# knipptasch

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Mainpage.dox  Makefile  Messages.sh  config-destination.cmake  knipptasch.kdev4  knipptasch.nsi  knipptasch.nsi.cmake
compat/: CMakeLists.txt  actioncollection.cpp  actioncollection.h  compat.h  iconloader.cpp  iconloader.h  standardaction.cpp  standardaction.h  utils.cpp  utils.h
compat/qtingkde/: kaction.h  kcolorbutton.cpp  kcolorbutton.h  kcolorcombo.cpp  kcolorcombo.h  kicon.h  klineedit.h  kpushbutton.h  ktextedit.h
compat/qtingkde/KDE/: KMenu
core/: CMakeLists.txt  abstractaccounttabwidget.cpp  abstractaccounttabwidget.h  abstractaccounttabwidgetplugin.cpp  abstractaccounttabwidgetplugin.h  abstractdockwidget.h  accountmodel.cpp  accountmodel.h  accountsortfilterproxymodel.cpp  accountsortfilterproxymodel.h  accounttablewidget.cpp  accounttablewidget.h  categorycombobox.cpp  categorycombobox.h  categorymodel.cpp  categorymodel.h  dateedit.cpp  dateedit.h  datepickerpopup.cpp  datepickerpopup.h  datevalidator.cpp  datevalidator.h  exportplugin.cpp  importplugin.cpp  knipptasch_core_export.h  plugin.cpp  plugin.h  preferences.cpp  preferences.h
core/backend/: account.cpp  account.h  attachment.cpp  attachment.h  baseposting.cpp  baseposting.h  category.cpp  category.h  money.h  object.cpp  object.h  posting.cpp  posting.h  storage.cpp  storage.h  storageexception.cpp  storageexception.h  subposting.cpp  subposting.h
core/delegate/: categorydelegate.cpp  categorydelegate.h  datedelegate.cpp  datedelegate.h  moneydelegate.cpp  moneydelegate.h  postingtextdelegate.cpp  postingtextdelegate.h
core/include/Knipptasch/: AbstractAccountTabWidget  Account  AccountModel  AccountSortFilterProxyModel  AccountTabPlugin  AccountTableWidget  Attachment  BasePosting  Category  CategoryComboBox  DateEdit  DateValidator  ExportPlugin  ImportPlugin  Money  Object  Plugin  Posting  Preferences  Storage  StorageException  SubPosting
core/plugin/: accounttabplugin.cpp  accounttabplugin.h  dockwidgetplugin.h  exportplugin.cpp  exportplugin.h  importplugin.cpp  importplugin.h  plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
core/widgets/: categorycombobox.cpp  dateedit.cpp  dateedit.h  datepickerpopup.h  datevalidator.h
data/: CMakeLists.txt  knipptasch.desktop  knipptaschui.rc  x-knipptasch.desktop  x-knipptasch.xml
data/icons/: CMakeLists.txt  appicon.qrc  oxygen.qrc
data/icons/import/: import_oxygen.pl
data/resources/: CMakeLists.txt  resources.qrc
data/win32/: CMakeLists.txt  Knipptasch - Documentation.url  Knipptasch - Forum.url  Knipptasch - Home page.url
gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  accountmodel.h  accountsortfilterproxymodel.cpp  accountsortfilterproxymodel.h  accountwidget.cpp  accountwidget.h  accountwidget.ui  categorycombobox.h  categorymodel.cpp  guipreferences.cpp  guipreferences.h  main.cpp  mainwindow.cpp  mainwindow.h  passworddialog.cpp  passworddialog.h  passworddialog.ui  quickreportpopup.cpp  quickreportpopup.h  quickreportwidget.cpp  quickreportwidget.h  quickreportwidget.ui  recentfilemenu.cpp  recentfilemenu.h  savemodifieddialog.cpp  savemodifieddialog.h  welcomewidget.cpp  welcomewidget.h
gui/accounttabwidgets/: descriptiontabwidget.cpp  descriptiontabwidget.h  postingtabwidget.cpp  splitpostingtabwidget.h
gui/config/: abstractconfigpage.cpp  abstractconfigpage.h  accountcategoryconfigpage.cpp  accountcategoryconfigpage.h  accountconfigdialog.cpp  accountconfigdialog.h  accountconfigwidget.cpp  accountconfigwidget.h  accountgeneralconfigpage.cpp  accountgeneralconfigpage.h  accountgeneralconfigpage.ui  accountpasswordconfigpage.cpp  accountpasswordconfigpage.h  appearancecolorchooserwidget.cpp  appearancecolorchooserwidget.h  appearancecolorchooserwidget.ui  configdialog.cpp  configdialog.h  configwidget.cpp  configwidget.h  configwidget.ui  preferencesaccounttableconfigpage.cpp  preferencesaccounttableconfigpage.h  preferencesaccounttableconfigpage.ui  preferencesappearanceconfigpage.cpp  preferencesappearanceconfigpage.h  preferencesconfigdialog.cpp  preferencesconfigdialog.h  preferencesconfigwidget.cpp  preferencesconfigwidget.h  preferencesgeneralconfigpage.cpp  preferencesgeneralconfigpage.h  preferencespluginconfigpage.cpp  preferencespluginconfigpage.h
gui/delegate/: categorydelegate.cpp  categorydelegate.h  datedelegate.cpp  datedelegate.h  moneydelegate.h  postingtextdelegate.cpp  postingtextdelegate.h
plugins/: CMakeLists.txt
plugins/accounttabwidgets/description/: CMakeLists.txt  descriptiontabplugin.cpp  descriptiontabplugin.h  descriptiontabwidget.h
plugins/csv/: CMakeLists.txt  csvexportdialog.cpp  csvexportdialog.h  csvexportplugin.cpp  csvexportplugin.h  csvimportdialog.cpp  csvimportdialog.h  csvimportplugin.cpp  csvimportplugin.h
plugins/csv_export/: CMakeLists.txt  csvexportdialog.cpp  csvexportdialog.ui  csvexportplugin.cpp
plugins/csv_import/: CMakeLists.txt  csvimportdialog.cpp  csvimportplugin.cpp  csvimportplugin.h
plugins/demo/: CMakeLists.txt  demoimportplugin.cpp  demoimportplugin.h
plugins/demo_import/: CMakeLists.txt
plugins/xml/: CMakeLists.txt  xmlexportplugin.cpp  xmlexportplugin.h  xmlimportplugin.cpp  xmlimportplugin.h  xmlreader.cpp  xmlreader.h  xmlwriter.cpp  xmlwriter.h
scripts/: codingstyle.sh  cppcheck.sh  download_l10n.sh
src/: .krazy  aboutdialog.h  accountmodel.cpp  accountmodel.h  accountsettingsdialog.cpp  accountsettingsdialog.h  accountsettingsdialog.ui  accountsortfilterproxymodel.cpp  accountsortfilterproxymodel.h  accountwidget.cpp  accountwidget.h  accountwidget.ui  categorycombobox.cpp  categorycombobox.h  categorymodel.h  dateedit.cpp  dateedit.h  datepickerpopup.cpp  knipptasch.kcfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passworddialog.cpp  passworddialog.h  passworddialog.ui  passwordwidget.cpp  passwordwidget.h  passwordwidget.ui  preferences.cpp  preferences.h  preferences.kcfgc  (+21 more)
strigi-analyzer/: CMakeLists.txt  knipptaschanalyzer.cpp
(+124 files in other folders)
