add_subdirectory( icons )
add_subdirectory( resources )

if( HAVE_KDE )
    install( FILES knipptasch.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
    install( FILES knipptaschui.rc    DESTINATION ${KNIPPTASCH_DATA_INSTALL_DIR} )
    install( FILES x-knipptasch.xml   DESTINATION ${XDG_MIME_INSTALL_DIR} )
    update_xdg_mimetypes( ${XDG_MIME_INSTALL_DIR} )
else( HAVE_KDE )
    if( WIN32 )
        add_subdirectory( win32 )
    else( WIN32 )
        install( FILES knipptasch.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications )
        install( FILES x-knipptasch.xml   DESTINATION ${CMAKE_INSTALL_PREFIX}/share/mime/packages )
        update_xdg_mimetypes( ${CMAKE_INSTALL_PREFIX}/share/mime/packages )
    endif( WIN32 )
endif( HAVE_KDE )